--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
 <meta name=description content>
 <meta name=generator content="Hugo 0.87.0">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
-<link rel=stylesheet href=http://localhost:8080/gitops-hugo/ananke/css/main.min.css>
+<link rel=stylesheet href=https://davidwmcneill.github.io/ananke/css/main.min.css>
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="http://localhost:8080/gitops-hugo/404.html">
+<meta property="og:url" content="https://davidwmcneill.github.io/404.html">
 <meta itemprop=name content="404 Page not found">
 <meta itemprop=description content><meta name=twitter:card content="summary">
 <meta name=twitter:title content="404 Page not found">
@@ -22,7 +22,7 @@
 <div class=bg-black>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
-<a href=http://localhost:8080/gitops-hugo/ class="f3 fw2 hover-white no-underline white-90 dib">
+<a href=https://davidwmcneill.github.io/ class="f3 fw2 hover-white no-underline white-90 dib">
 DevOps Blog
 </a>
 <div class="flex-l items-center">
@@ -40,7 +40,7 @@ This is not the page you were looking for
 </main>
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
-<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=http://localhost:8080/gitops-hugo>
+<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=https://davidwmcneill.github.io/>
 &copy; DevOps Blog 2021
 </a>
 <div>
