--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <meta name=description content>
 <meta name=generator content="Hugo 0.87.0">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
-<link rel=stylesheet href=http://localhost:8080/gitops-hugo/ananke/css/main.min.css>
-<link href=http://localhost:8080/gitops-hugo/index.xml rel=alternate type=application/rss+xml title="DevOps Blog">
-<link href=http://localhost:8080/gitops-hugo/index.xml rel=feed type=application/rss+xml title="DevOps Blog">
+<link rel=stylesheet href=https://davidwmcneill.github.io/ananke/css/main.min.css>
+<link href=https://davidwmcneill.github.io/index.xml rel=alternate type=application/rss+xml title="DevOps Blog">
+<link href=https://davidwmcneill.github.io/index.xml rel=feed type=application/rss+xml title="DevOps Blog">
 <meta property="og:title" content="DevOps Blog">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="http://localhost:8080/gitops-hugo/">
+<meta property="og:url" content="https://davidwmcneill.github.io/">
 <meta itemprop=name content="DevOps Blog">
 <meta itemprop=description content><meta name=twitter:card content="summary">
 <meta name=twitter:title content="DevOps Blog">
@@ -24,7 +24,7 @@
 <div class="pb3-m pb6-l bg-black">
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
-<a href=http://localhost:8080/gitops-hugo/ class="f3 fw2 hover-white no-underline white-90 dib">
+<a href=https://davidwmcneill.github.io/ class="f3 fw2 hover-white no-underline white-90 dib">
 DevOps Blog
 </a>
 <div class="flex-l items-center">
@@ -52,14 +52,14 @@ Recent Posts
 <div class="flex flex-column flex-row-ns">
 <div class="blah w-100">
 <h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=http://localhost:8080/gitops-hugo/posts/quote/ class="color-inherit dim link">
+<a href=https://davidwmcneill.github.io/posts/quote/ class="color-inherit dim link">
 motivation
 </a>
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
 quote I Didn&rsquo;t Come This Far To Only Come This Far
 </div>
-<a href=http://localhost:8080/gitops-hugo/posts/quote/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+<a href=https://davidwmcneill.github.io/posts/quote/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
 </div>
 </div>
 </div>
@@ -70,7 +70,7 @@ quote I Didn&rsquo;t Come This Far To Only Come This Far
 </main>
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
-<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=http://localhost:8080/gitops-hugo>
+<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=https://davidwmcneill.github.io/>
 &copy; DevOps Blog 2021
 </a>
 <div>
