--- a/about/index.html
+++ b/about/index.html
@@ -2,25 +2,25 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>DevOps Blog | DevOps Blog</title>
+<title>About | DevOps Blog</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content="Tooling and more...">
+<meta name=description content>
 <meta name=generator content="Hugo 0.87.0">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.css>
-<link href=/index.xml rel=alternate type=application/rss+xml title="DevOps Blog">
-<link href=/index.xml rel=feed type=application/rss+xml title="DevOps Blog">
-<meta property="og:title" content="DevOps Blog">
-<meta property="og:description" content="Tooling and more...">
+<link href=/about/index.xml rel=alternate type=application/rss+xml title="DevOps Blog">
+<link href=/about/index.xml rel=feed type=application/rss+xml title="DevOps Blog">
+<meta property="og:title" content="About">
+<meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://davidwmcneill.github.io/">
-<meta itemprop=name content="DevOps Blog">
-<meta itemprop=description content="Tooling and more..."><meta name=twitter:card content="summary">
-<meta name=twitter:title content="DevOps Blog">
-<meta name=twitter:description content="Tooling and more...">
+<meta property="og:url" content="https://davidwmcneill.github.io/about/">
+<meta itemprop=name content="About">
+<meta itemprop=description content><meta name=twitter:card content="summary">
+<meta name=twitter:title content="About">
+<meta name=twitter:description content>
 </head>
 <body class="ma0 avenir bg-near-white">
-<header class="cover bg-top" style="background-image:url(https://images.unsplash.com/photo-1518364538800-6bae3c2ea0f2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3428&q=80)">
+<header class="cover bg-top" style="background-image:url(https://images.unsplash.com/photo-1611424564056-65b8f1403ba2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2765&q=80)">
 <div class=bg-black-60>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
@@ -48,71 +48,18 @@ Posts
 </nav>
 <div class="tc-l pv4 pv6-l ph3 ph4-ns">
 <h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">
-DevOps Blog
+About
 </h1>
-<h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt3">
-Tooling and more...
-</h2>
 </div>
 </div>
 </header>
 <main class=pb7 role=main>
-<article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
-<blockquote>
-<p>&lsquo;I Didn&rsquo;t Come This Far To Only Come This Far&rsquo; - Jesse Itzler</p>
-</blockquote>
-</article>
-<div class="pa3 pa4-ns w-100 w-70-ns center">
-<h1 class=flex-none>
-Recent Posts
-</h1>
-<section class="w-100 mw8">
-<div class="relative w-100 mb4">
-<article class="bb b--black-10">
-<div class="db pv4 ph3 ph0-l no-underline dark-gray">
-<div class="flex flex-column flex-row-ns">
-<div class="blah w-100">
-<h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=/posts/hugo-gh-pages/ class="color-inherit dim link">
-Hugo with GitHub Pages
-</a>
-</h1>
-<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-Before writing a blog, there needs to be a blog.
-As a good a place as any to start&mldr;.
-Hugo with a Theme I already had a quick-start Hugo site for testing a local k3d build pipeline and it was while creating this I stumbled upon the integration with github actions.
-This time around I decided to give it a go&mldr;.hosting on github
-I went slightly beyond the quick-start and used Hugo Modules for importing a theme, following the steps for the Ananke theme.
-</div>
-<a href=/posts/hugo-gh-pages/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
-</div>
-</div>
-</div>
-</article>
-</div>
-<div class="relative w-100 mb4">
-<article class="bb b--black-10">
-<div class="db pv4 ph3 ph0-l no-underline dark-gray">
-<div class="flex flex-column flex-row-ns">
-<div class="blah w-100">
-<h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=/posts/motivation/ class="color-inherit dim link">
-Blog Motivation
-</a>
-</h1>
-<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-Typically I track my technical note taking using Notion. This works well as a personal wiki for everything I learn where the smaller details are likely to slip out of my brain in the future!
-The premise of this blog is to build on these notes with a more formal summary for future reference (and hopefully help sharpen my knowledge on the subject matter)
-In some way this is inspired by the many hours I spend reading on medium
-</div>
-<a href=/posts/motivation/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
-</div>
-</div>
-</div>
-</article>
-</div>
+<article class="pa3 pa4-ns nested-copy-line-height nested-img">
+<section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><p>Wondering through the world of DevOps and cloud native&mldr;.
+Exploring new tech and new ideas</p>
 </section>
-</div>
+<section class="flex-ns flex-wrap justify-around mt5">
+</section></article>
 </main>
 <footer class="bg-mid-gray bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
