--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Recent Posts
 <div class="blah w-100">
 <h1 class="f3 fw1 athelas mt0 lh-title">
 <a href=./posts/k3d-argocd/ class="color-inherit dim link">
-K3d with ArgoCD
+K3d + ArgoCD = Local GitOps
 </a>
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
