--- a/index.html
+++ b/index.html
@@ -73,6 +73,48 @@ Recent Posts
 <div class="flex flex-column flex-row-ns">
 <div class="blah w-100">
 <h1 class="f3 fw1 athelas mt0 lh-title">
+<a href=./posts/resources/ class="color-inherit dim link">
+Resource Catalogue
+</a>
+</h1>
+<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+This will be a live document as I discover new resources. A go-to for inspiration or just learning something new. A catalogue of all my favorite DevOps gurus!
+Github Resource repositories How They SRE: A curated collection of publicly available resources on how technology and tech-savvy organizations around the world practice Site Reliability Engineering (SRE)
+Awesome-aws: A curated list of awesome AWS libraries, open source repos, guides, blogs, and other resources.
+</div>
+<a href=./posts/resources/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+</div>
+</div>
+</div>
+</article>
+</div>
+<div class="relative w-100 mb4">
+<article class="bb b--black-10">
+<div class="db pv4 ph3 ph0-l no-underline dark-gray">
+<div class="flex flex-column flex-row-ns">
+<div class="blah w-100">
+<h1 class="f3 fw1 athelas mt0 lh-title">
+<a href=./posts/selenium-kubernetes/ class="color-inherit dim link">
+Selenium with Kubernetes
+</a>
+</h1>
+<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+Background I&rsquo;ve read and heard a lot about Selenium over the years, but never got my hands dirty. It&rsquo;s been on my &lsquo;todo&rsquo; list for a fair while!
+This blog topic is a good excuse to cover off a few learning points:
+Get an automated test running in a local k3d cluster to generate some traffic when testing progressive deployments with Argo-rollouts Investigate the options for running Selenium in K8s and how it can scale Write some Python!
+</div>
+<a href=./posts/selenium-kubernetes/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+</div>
+</div>
+</div>
+</article>
+</div>
+<div class="relative w-100 mb4">
+<article class="bb b--black-10">
+<div class="db pv4 ph3 ph0-l no-underline dark-gray">
+<div class="flex flex-column flex-row-ns">
+<div class="blah w-100">
+<h1 class="f3 fw1 athelas mt0 lh-title">
 <a href=./posts/argocd-gitops/ class="color-inherit dim link">
 GitOps in practice
 </a>
@@ -139,15 +181,27 @@ I&rsquo;ve since used Hugo for a demo local k3d build pipeline and it was while 
 </div>
 </article>
 </div>
-</section>
-<section class=w-100>
-<h1 class=f3>More</h1>
-<h2 class="f5 fw4 mb4 dib mr3">
-<a href=./posts/motivation/ class="link black dim">
+<div class="relative w-100 mb4">
+<article class="bb b--black-10">
+<div class="db pv4 ph3 ph0-l no-underline dark-gray">
+<div class="flex flex-column flex-row-ns">
+<div class="blah w-100">
+<h1 class="f3 fw1 athelas mt0 lh-title">
+<a href=./posts/motivation/ class="color-inherit dim link">
 Blog Motivation
 </a>
-</h2>
-<a href=./posts/ class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">All Posts</a>
+</h1>
+<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+Typically I track my technical note taking using Notion. This works well as a personal wiki for everything I learn where the smaller details are likely to slip out of my brain in the future!
+The premise of this blog is to build on these notes with a more formal summary for future reference (and hopefully help sharpen my knowledge on the subject matter)
+In some way this is inspired by the many hours spent reading on medium
+</div>
+<a href=./posts/motivation/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+</div>
+</div>
+</div>
+</article>
+</div>
 </section>
 </div>
 </main>
