post update cd49fcff885c17a465fff0079612261bce331622

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Selenium with Kubernetes
 </a>
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-Background I&rsquo;ve read and heard a lot about Selenium over the years, but never got my hands dirty. It&rsquo;s been on my &lsquo;todo&rsquo; list for a fair while!
+Background A deeper look into Selenium has been on my &lsquo;todo&rsquo; list for a fair while, Time to get my hands dirty!
 This blog topic is a good excuse to cover off a few learning points:
 Get an automated test running in a local k3d cluster to generate some traffic when testing progressive deployments with Argo-rollouts Investigate the options for running Selenium in K8s and how it can scale Write some Python!
 </div>
