progressive delivery 84cf325195152d066afdb4c9389e151da64d51ca

--- a/index.html
+++ b/index.html
@@ -73,6 +73,27 @@ Recent Posts
 <div class="flex flex-column flex-row-ns">
 <div class="blah w-100">
 <h1 class="f3 fw1 athelas mt0 lh-title">
+<a href=./posts/progressive-delivery/ class="color-inherit dim link">
+Progressive Delivery with Argo-rollouts
+</a>
+</h1>
+<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+What is progressive delivery? There are a lots of definitions of &lsquo;progressive delivery&rsquo; so I&rsquo;ll go with the one I find to be the most concise via devopsinsitute
+Progressive delivery is the process of pushing changes to a product iteratively, first to a small audience and then to increasingly larger audiences to maintain quality control. Progressive Delivery is a modified version of Continuous Delivery
+There are a few options for implementing progressive delivery within a kubernetes cluster (see also flagger).
+</div>
+<a href=./posts/progressive-delivery/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+</div>
+</div>
+</div>
+</article>
+</div>
+<div class="relative w-100 mb4">
+<article class="bb b--black-10">
+<div class="db pv4 ph3 ph0-l no-underline dark-gray">
+<div class="flex flex-column flex-row-ns">
+<div class="blah w-100">
+<h1 class="f3 fw1 athelas mt0 lh-title">
 <a href=./posts/resources/ class="color-inherit dim link">
 Resource Catalogue
 </a>
@@ -181,27 +202,15 @@ I&rsquo;ve since used Hugo for a demo local k3d build pipeline and it was while 
 </div>
 </article>
 </div>
-<div class="relative w-100 mb4">
-<article class="bb b--black-10">
-<div class="db pv4 ph3 ph0-l no-underline dark-gray">
-<div class="flex flex-column flex-row-ns">
-<div class="blah w-100">
-<h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=./posts/motivation/ class="color-inherit dim link">
+</section>
+<section class=w-100>
+<h1 class=f3>More</h1>
+<h2 class="f5 fw4 mb4 dib mr3">
+<a href=./posts/motivation/ class="link black dim">
 Blog Motivation
 </a>
-</h1>
-<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-Typically I track my technical note taking using Notion. This works well as a personal wiki for everything I learn where the smaller details are likely to slip out of my brain in the future!
-The premise of this blog is to build on these notes with a more formal summary for future reference (and hopefully help sharpen my knowledge on the subject matter)
-In some way this is inspired by the many hours spent reading on medium
-</div>
-<a href=./posts/motivation/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
-</div>
-</div>
-</div>
-</article>
-</div>
+</h2>
+<a href=./posts/ class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">All Posts</a>
 </section>
 </div>
 </main>
