--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Progressive Delivery with Argo-rollouts
 </a>
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-What is progressive delivery? There are a lots of definitions of &lsquo;progressive delivery&rsquo; so I&rsquo;ll go with the one I find to be the most concise via devopsinsitute
+What is progressive delivery? There are various definitions of &lsquo;progressive delivery&rsquo; so I&rsquo;ll go with the one I find to be the most concise via devopsinsitute
 Progressive delivery is the process of pushing changes to a product iteratively, first to a small audience and then to increasingly larger audiences to maintain quality control. Progressive Delivery is a modified version of Continuous Delivery
 There are a few options for implementing progressive delivery within a kubernetes cluster (see also flagger).
 </div>
